--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-port=8080
+PORT=8080
 mongo_url=mongodb+srv://v:k@cluster0.rfemepx.mongodb.net/evaldb4?retryWrites=true&w=majority
 encoded_key=hurray
 salt_rounds=5
